--- a/Backoffice/Components/Clients/ClientPresentationComponent.razor
+++ b/Backoffice/Components/Clients/ClientPresentationComponent.razor
@@ -139,6 +139,9 @@
     
     [Parameter]
     public string WalletId { get; set; }
+    
+    [Parameter]
+    public bool EmailConfirmed { get; set; }
 
     private ClientPage ActivePage { get; set; }
 
@@ -180,7 +183,7 @@
 
         var wallets = await _walletService.GetWalletsByClient(new JetClientIdentity(BrokerId, BrandId, ClientId));
 
-        Client = new ClientModel(BrokerId, ClientId, BrandId);
+        Client = new ClientModel(BrokerId, ClientId, BrandId,EmailConfirmed);
         Client.Wallets = (wallets.Wallets ?? new List<ClientWallet>())
             .Select(e => new WalletModel(e.Name, BrokerId, ClientId, BrandId, e.WalletId, e.IsDefault))
             .ToList();
