added refresh button to asset portolio

--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -14,6 +14,10 @@
     </li>
 </ul>
 
+<ul class="nav">
+    <li><button type="button" class="btn-outline-secondary btn" @onclick="Refresh">Refresh</button></li>
+</ul>
+
 @if (ActivePage == AssetPortfolioPages.AssetPortfolio)
 {
     <table class="table" style="width: auto">
