update references and add field to TopicSource

--- a/Backoffice/Components/Liquidity/AssetPortfolio/Components/LeTradePortolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/Components/LeTradePortolioComponent.razor
@@ -25,6 +25,7 @@
         <th>QuoteVolume</th>
         <th>WalletId</th>
         <th>TradeId</th>
+        <th>TopicSource</th>                
     </tr>
     </thead>
     <tbody>
@@ -41,6 +42,7 @@
             <td>@trade.QuoteVolume</td>
             <td>@trade.WalletId</td>
             <td>@trade.TradeId</td>
+            <td>@trade.TopicSource</td>
         </tr>
     }
     </tbody>
