client search fix

--- a/Backoffice/Pages/Clients.razor
+++ b/Backoffice/Pages/Clients.razor
@@ -113,7 +113,10 @@
                 SearchText = result.Id,
                 Take = 10
             });
-            ClientResults.AddRange(response.Clients.Select(client => new ClientResultModel(client, result.EmailIsConfirmed)));
+            if (response.Clients?.Any() == true)
+            {
+                ClientResults.AddRange(response.Clients.Select(client => new ClientResultModel(client, result.EmailIsConfirmed)));
+            }
         }
         
         if (!ClientResults.Any())
