sms provider list fix

--- a/Backoffice/Components/SmsSender/Providers/ProvidersComponent.razor
+++ b/Backoffice/Components/SmsSender/Providers/ProvidersComponent.razor
@@ -76,7 +76,8 @@
             try
             {
                 var providersRoutesResponse = await SmsProviderService.GetAllRoutesAsync();
-                ProvidersRoutes = providersRoutesResponse.Routes.OrderBy(r => r.Order).ToList();
+                if(providersRoutesResponse.Routes != null)
+                    ProvidersRoutes = providersRoutesResponse.Routes.OrderBy(r => r.Order).ToList();
                 break;
             }
             catch (Exception ex)
