--- a/Backoffice/Components/Liquidity/AssetPortfolio/Components/LeTradePortolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/Components/LeTradePortolioComponent.razor
@@ -23,6 +23,8 @@
         <th>Price</th>
         <th>BaseVolume</th>
         <th>QuoteVolume</th>
+        <th>BrokerId</th>
+        <th>ClientId</th>
         <th>WalletId</th>
         <th>TradeId</th>
         <th>TopicSource</th>                
@@ -40,6 +42,8 @@
             <td>@trade.Price</td>
             <td>@trade.BaseVolume</td>
             <td>@trade.QuoteVolume</td>
+            <td>@trade.BrokerId</td>
+            <td>@trade.ClientId</td>
             <td>@trade.WalletId</td>
             <td>@trade.TradeId</td>
             <td>@trade.TopicSource</td>
