--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -33,7 +33,7 @@
         </tr>
         </thead>
         <tbody>
-        @foreach (var assetBalance in _balanceCollection.OrderBy(elem => elem.Asset))
+        @foreach (var assetBalance in _balanceCollection.OrderByDescending(elem => elem.UpdateDate))
         {
             <BalanceTableRowComponent AssetBalance="@assetBalance" OnSaveCallback="@Refresh"/>
         }
@@ -72,6 +72,7 @@
     private async Task SetAssetPortfolio()
     {
         ActivePage = AssetPortfolioPages.AssetPortfolio;
+        await Refresh();
         StateHasChanged();
     }
     private async Task SetTrades()
