--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeTradePortolioComponent.razor
@@ -10,7 +10,7 @@
         <li><button type="button" class="btn-outline-info btn" @onclick="NextPage">>>> Next >>></button></li>
     }
     <li><button type="button" class="btn-outline-secondary btn" @onclick="CreateNew">Create new</button></li>
-    <li><button type="button" class="btn-outline-secondary btn" @onclick="RefreshHistory">Refresh</button></li>
+    <li><button type="button" class="btn-outline-secondary btn" @onclick="Refresh">Refresh</button></li>
     <li><span style="margin-left: 10px; vertical-align: center">Count in page: </span><input type="number" style="width: 40px" @bind="CountInPage"/></li>
 </ul>
 
@@ -116,7 +116,7 @@
 
     protected override async Task OnInitializedAsync()
     {
-        await RefreshHistory();
+        await Refresh();
     }
 
     private async void OnSaveNewTrade()
@@ -148,7 +148,7 @@
         NewTrade = new CreateTradeManualRequest();
     }
 
-    private async Task RefreshHistory()
+    private async Task Refresh()
     {
         var response = await _assetPortfolioService.GetTradesAsync(new GetTradesRequest() {BatchSize = CountInPage});
         _trades = response.Trades ?? new List<Trade>();
