- add B2C2 external markets settings;

--- a/Backoffice/Components/ExternalMarkets/B2C2/ExternalMarketsB2C2TableRow.razor
+++ b/Backoffice/Components/ExternalMarkets/B2C2/ExternalMarketsB2C2TableRow.razor
@@ -8,11 +8,10 @@
 
 <tr>
     <td>@Item.Market</td>
-    <td>@Item.BaseAsset</td>
-    <td>@Item.QuoteAsset</td>
     <td>@Item.PriceAccuracy</td>
     <td>@Item.VolumeAccuracy</td>
     <td>@Item.MinVolume</td>
+    <td>@Item.Levels</td>
 
     <td>
         <ul class="nav">
