--- a/Backoffice/Components/Fees/Assets/AssetFeesListComponent.razor
+++ b/Backoffice/Components/Fees/Assets/AssetFeesListComponent.razor
@@ -15,10 +15,12 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Symbol</th>
-            <th>BitGo wallet</th>
-            <th>Enabled BitGo wallet</th>
-            <th>BitGo coin</th>
+            <th>Asset</th>
+            <th>Operation type</th>
+            <th>Fee wallet</th>
+            <th>Fee Type</th>
+            <th>Fee Size</th>
+            <th>Fee Size Type</th>
             <th></th>
         </tr>
     </thead>
