--- a/Backoffice/Components/Fees/Instruments/InstrumentFeesListComponent.razor
+++ b/Backoffice/Components/Fees/Instruments/InstrumentFeesListComponent.razor
@@ -14,10 +14,13 @@
 <table class="table">
     <thead>
         <tr>
-            <th>Symbol</th>
-            <th>BitGo wallet</th>
-            <th>Enabled BitGo wallet</th>
-            <th>BitGo coin</th>
+            <th>Instrument</th>
+            <th>Fee wallet</th>
+            <th>Fee Type</th>
+            <th>Maker Fee Size</th>
+            <th>Maker Fee Size Type</th>
+            <th>Taker Fee Size</th>
+            <th>Taker Fee Size Type</th>
             <th></th>
         </tr>
     </thead>
