- fix fees nav;

--- a/Backoffice/Pages/Fees.razor
+++ b/Backoffice/Pages/Fees.razor
@@ -9,10 +9,10 @@
         <button class="nav-link @CheckActive(Menus.Assets)" aria-current="page" @onclick="SetAssets">Assets</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Instruments)" aria-current="page" @onclick="SetAssets">Instruments</button>
+        <button class="nav-link @CheckActive(Menus.Instruments)" aria-current="page" @onclick="SetInstruments">Instruments</button>
     </li>
     <li class="nav-item" style="margin: 10px">
-        <button class="nav-link @CheckActive(Menus.Balance)" aria-current="page" @onclick="SetAssets">Fee wallet balance</button>
+        <button class="nav-link @CheckActive(Menus.Balance)" aria-current="page" @onclick="SetBalance">Fee wallet balance</button>
     </li>
 </ul>
 
