--- a/Backoffice/Components/Liquidity/AssetPortfolio/LeChangeBalanceHistoryComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/LeChangeBalanceHistoryComponent.razor
@@ -10,11 +10,11 @@
     <thead>
     <tr>
         <th>UpdateDate</th>
-        <th>BrokerId</th>
-        <th>ClientId</th>
-        <th>WalletId</th>
+        <th>WalletName</th>
         <th>Asset</th>
         <th>VolumeDifference</th>
+        <th>Comment</th>
+        <th>User</th>
     </tr>
     </thead>
     <tbody>
@@ -23,11 +23,11 @@
     {
         <tr>
             <td>@history.UpdateDate</td>
-            <td>@history.BrokerId</td>
-            <td>@history.ClientId</td>
-            <td>@history.WalletId</td>
+            <td>@history.WalletName</td>
             <td>@history.Asset</td>
             <td>@history.VolumeDifference</td>
+            <td>@history.Comment</td>
+            <td>@history.User</td>
         </tr>
     }
     </tbody>
