--- a/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
+++ b/Backoffice/Components/Liquidity/AssetPortfolio/AssetPortfolioComponent.razor
@@ -21,24 +21,72 @@
 {
     <ul class="nav">
         <li><button type="button" class="btn-outline-secondary btn" @onclick="Refresh">Refresh</button></li>
+        <li><button type="button" class="btn-outline-warning btn" @onclick="ShowEdit">Change balance</button></li>
     </ul>
-    
     <table class="table" style="width: auto">
         <thead>
         <tr>
-            <th>UpdateDate</th>
-            <th>BrokerId</th>
-            <th>ClientId</th>
-            <th>WalletId</th>
-            <th>Asset</th>
-            <th>Volume</th>
-            <th>USD Projection</th>
+            <th>Wallet Name</th>
+            <th>NET USD</th>
         </tr>
         </thead>
         <tbody>
-        @foreach (var assetBalance in _balanceCollection.OrderByDescending(elem => elem.UpdateDate))
+        @foreach (var walletName in _balanceCollection
+            .Select(elem => elem.WalletName)
+            .OrderBy(elem => elem)
+            .Distinct())
         {
-            <BalanceTableRowComponent AssetBalance="@assetBalance" OnSaveCallback="@Refresh"/>
+            <tr>
+                <td>@walletName</td>
+                <td>@(Math.Round(_balanceCollection.Where(elem => elem.WalletName == walletName).Sum(elem => elem.UsdProjection), 2))</td>
+            </tr>
+        }
+        </tbody>
+    </table>
+
+    <table class="table" style="width: auto">
+        <thead>
+        <tr>
+            <th>Asset</th>
+            @foreach (var walletName in _balanceCollection
+                .Select(elem => elem.WalletName)
+                .OrderBy(elem => elem)
+                .Distinct())
+            {
+                <th>@walletName</th>
+            }
+            <th style="background: lightgray">NET</th>
+        </tr>
+        </thead>
+        <tbody>
+        
+        @foreach (var asset in _balanceCollection.Select(elem => elem.Asset)
+            .OrderBy(elem => elem)
+            .Distinct())
+        {
+            <tr>
+                <td><b>@asset</b></td>
+                @foreach (var walletName in _balanceCollection
+                    .Select(elem => elem.WalletName)
+                    .OrderBy(elem => elem)
+                    .Distinct())
+                {
+                    <td>
+                        @if (_balanceCollection.FirstOrDefault(elem => elem.Asset == asset && elem.WalletName == walletName)?.Volume != null &&
+                            _balanceCollection.FirstOrDefault(elem => elem.Asset == asset && elem.WalletName == walletName)?.Volume != 0)
+                        {
+                            <span><b>@(Math.Round(_balanceCollection.FirstOrDefault(elem => elem.Asset == asset && elem.WalletName == walletName).Volume, 2))</b></span>
+                            <br>
+                            <span>USD: @(Math.Round(_balanceCollection.FirstOrDefault(elem => elem.Asset == asset && elem.WalletName == walletName).UsdProjection, 2))</span>
+                        }
+                    </td>
+                }
+                <td style="background: lightgray">
+                    <span><b>@(Math.Round(_balanceCollection.Where(elem => elem.Asset == asset).Sum(elem => elem.Volume), 2))</b></span>
+                    <br>
+                    <span>USD: @(Math.Round(_balanceCollection.Where(elem => elem.Asset == asset).Sum(elem => elem.UsdProjection), 2))</span>
+                </td>
+            </tr>
         }
         </tbody>
     </table>
@@ -52,10 +100,57 @@
     <LeChangeBalanceHistoryComponent />
 }
 
+@if (IsShowEdit)
+{
+    <div>
+        <BaseTwoButtonsDialog
+            Caption="Change balance"
+            OnClose="@OnCloseEditDialog"
+            YesButtonCaption="Save"
+            NoButtonCaption="Cancel"
+            OnSubmit="@SaveBalance">
+            <table>
+                <tr>
+                    <td>BrokerId</td>
+                    <td><input type="text" class="form-control" @bind=BrokerId /></td>
+                </tr>
+                <tr>
+                    <td>Wallet Name</td>
+                    <td><input type="text" class="form-control" @bind=WalletName /></td>
+                </tr>
+                <tr>
+                    <td>Asset</td>
+                    <td><input type="text" class="form-control" @bind=Asset /></td>
+                </tr>
+                <tr>
+                    <td>Balance difference</td>
+                    <td><input type="number" class="form-control" @bind=BalanceDiff /></td>
+                </tr>
+                <tr>
+                    <td>Comment</td>
+                    <td><input type="text" class="form-control" @bind=Comment /></td>
+                </tr>
+                <tr>
+                    <td>User</td>
+                    <td><input type="text" class="form-control" @bind=User /></td>
+                </tr>
+            </table>
+        </BaseTwoButtonsDialog>
+    </div>
+}
+
+
 @code {
     private AssetPortfolioPages ActivePage { get; set; }
-
     private List<AssetBalanceGrpc> _balanceCollection = new();
+    
+    private bool IsShowEdit { get; set; }
+    private double BalanceDiff { get; set; }
+    private string Comment { get; set; }
+    private string User { get; set; }
+    private string BrokerId { get; set; }
+    private string WalletName { get; set; }
+    private string Asset { get; set; }
     
     protected override async Task OnInitializedAsync()
     {
@@ -103,9 +198,47 @@
     
     private string CheckActive(AssetPortfolioPages target)
     {
-        if (ActivePage == target)
-            return "active";
-
-        return "";
+        return ActivePage == target ? "active" : "";
+    }
+    
+    private void ShowEdit()
+    {
+        IsShowEdit = true;
+        StateHasChanged();
+    }
+    
+    private void OnCloseEditDialog()
+    {
+        IsShowEdit = false;
+        Comment = string.Empty;
+        User = string.Empty;
+        WalletName = string.Empty;
+        Asset = string.Empty;
+        BalanceDiff = 0;
+        
+        StateHasChanged();
+    }
+    
+    private async void SaveBalance()
+    {
+        if (BalanceDiff != 0 &&
+            !string.IsNullOrWhiteSpace(Asset) &&
+            !string.IsNullOrWhiteSpace(Comment) &&
+            !string.IsNullOrWhiteSpace(User) &&
+            !string.IsNullOrWhiteSpace(BrokerId) &&
+            !string.IsNullOrWhiteSpace(WalletName))
+        {
+            var response = await _assetPortfolioService.UpdateBalance(new UpdateBalanceRequest()
+            {
+                BrokerId = BrokerId,
+                WalletName = WalletName,
+                Asset = Asset,
+                BalanceDifference = BalanceDiff,
+                Comment = Comment,
+                User = User
+            });
+            await Refresh();
+        }
+        OnCloseEditDialog();
     }
 }
